force-app/main/default/objects/custom_create203__c/custom_create203__c.object-meta.xml
<CustomObject>
    <label>Custom created object203</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects203</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>