force-app/main/default/objects/custom_create203__c/fields/custom_create_203field525__c.field-meta.xml
<CustomField>
    <fullName>custom_create_203field525__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 203field525</label>
    <type>Checkbox</type>
</CustomField>