force-app/main/default/objects/custom_create203__c/fields/custom_create_203field567__c.field-meta.xml
<CustomField>
    <fullName>custom_create_203field567__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 203field567</label>
    <type>Checkbox</type>
</CustomField>